--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql": "^0.13.2",
-    "graphql-tools": "^3.1.1"
+    "graphql-tools": "^3.1.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.9.2"
   }
 }
