--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-server-express": "^1.4.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.1.1",
     "mysql2": "^1.6.5",
