--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "apollo-server-express": "^1.4.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
     "faker": "^4.1.0",
     "graphql": "^0.13.2",
+    "graphql-fields": "^2.0.3",
     "graphql-tools": "^3.1.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.9.2"
