--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "faker": "^4.1.0",
     "graphql": "^0.13.2",
     "graphql-fields": "^2.0.3",
+    "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^3.1.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.9.2"
