--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "graphql-fields": "^2.0.3",
     "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^3.1.1",
+    "graphql-type-json": "^0.3.0",
+    "moment-timezone": "^0.5.26",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.9.2"
+    "replace-string": "^3.0.0",
+    "sequelize": "^5.9.2",
+    "validator": "^11.1.0"
   }
 }
