--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "apollo-server-express": "^1.4.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "faker": "^4.1.0",
@@ -27,7 +28,7 @@
     "moment-timezone": "^0.5.26",
     "mysql2": "^1.6.5",
     "replace-string": "^3.0.0",
-    "sequelize": "^5.9.2",
+    "sequelize": "^5.10.1",
     "validator": "^11.1.0"
   }
 }
